[WK2-Gtk]Compilation errors with flag CONTEXT_MENUS=0 https://bugs.webkit.org/show_bug.cgi?id=87842

Patch by chandra Shekar Vallala <chandra.vallala@motorola.com> on 2012-06-06
Reviewed by Martin Robinson.

Fix for compilation errors while building webkit2-gtk with CONTEXT_MENUS=0

* UIProcess/gtk/WebContextMenuProxyGtk.cpp: Added code under CONTEXT_MENUS CC
* UIProcess/gtk/WebContextMenuProxyGtk.h: Ditto
* WebProcess/WebCoreSupport/gtk/WebContextMenuClientGtk.cpp: Ditto

Canonical link: https://commits.webkit.org/106254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119592 268f45cc-cd09-0410-ab3c-d52691b4dbfc